Hair particle selection broken in Point selection mode in specific blend file. #70259

Closed
opened 2019-09-26 01:33:20 +02:00 by Kevin · 9 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Short description of error
Selection of hair particles in "Point" selection mode has stopped working in my blend file. Most selection hotkeys and operations under the "Select" menu as well as box select no longer do anything. Some selection operations like Lasso select and Ctrl + Numpad "+" still work, but you cannot comb the hair event when it is selected. "Tip" selection mode works normally. Restarting Blender and reloading the project does not fix the issue.

Exact steps for others to reproduce the error
HairSelectionBug.blend
I don't know of steps to reproduce on new blend files, but using the above blend file where the bug has occurred:

  1. Select the Body mesh and enter Particle Edit mode.
  2. Enable "Point" selection mode.
  3. Attempt to select or deselect any hair particle(s) using box select, L to select a strand, A and Alt+A. You will not be able to select or deselect anything with these methods.
  4. Attempt to select any hair particle(s) using lasso select. This will allow you to select hair particles, but you cannot comb them.
  5. Enable "Tip" selection mode.
  6. Confirm that all selection methods and combing works normally in this mode
**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional) **Short description of error** Selection of hair particles in "Point" selection mode has stopped working in my blend file. Most selection hotkeys and operations under the "Select" menu as well as box select no longer do anything. Some selection operations like Lasso select and Ctrl + Numpad "+" still work, but you cannot comb the hair event when it is selected. "Tip" selection mode works normally. Restarting Blender and reloading the project does not fix the issue. **Exact steps for others to reproduce the error** [HairSelectionBug.blend](https://archive.blender.org/developer/F7775307/HairSelectionBug.blend) I don't know of steps to reproduce on new blend files, but using the above blend file where the bug has occurred: 1) Select the Body mesh and enter Particle Edit mode. 2) Enable "Point" selection mode. 3) Attempt to select or deselect any hair particle(s) using box select, L to select a strand, A and Alt+A. You will not be able to select or deselect anything with these methods. 4) Attempt to select any hair particle(s) using lasso select. This will allow you to select hair particles, but you cannot comb them. 5) Enable "Tip" selection mode. 6) Confirm that all selection methods and combing works normally in this mode
Author

Added subscriber: @Crazymonkay

Added subscriber: @Crazymonkay
Kevin changed title from Some hair particle selection methods no longer work in Point selection mode in specific blend files. to Hair particle selection broken in Point selection mode in specific blend file. 2019-09-26 02:11:07 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm in this particular file...
All seems to be fine if I append the body into a fresh file... checking...

Can confirm in this particular file... All seems to be fine if I append the body into a fresh file... checking...
Member

Appending the collection is also fine.
Something in the scene is preventing the selection, you can also make a fresh new scene in your file and select the body, then Object > Make Links > Objects to Scene > Scene.001.
Everything is fine in Scene.001 then.

However, if you do this in a copied scene [that has been created with Copy Settings] then problems arise...
Still checking...

Appending the collection is also fine. Something in the scene is preventing the selection, you can also make a fresh new scene in your file and select the body, then `Object` > `Make Links` > `Objects to Scene` > `Scene.001`. Everything is fine in `Scene.001` then. However, if you do this in a copied scene [that has been created with `Copy Settings`] then problems arise... Still checking...
Member

more findings:

For some reason the PTCacheEditKeys are flagged PEK_HIDE.
This also explains why lasso select partially works (because lasso loops with LOOP_KEYS, whereas e.g. box select loops with LOOP_VISIBLE_KEYS).
In this regard lasso select is actually wrong imho, shouldnt let you select those... also explains why combing is not working then (this wont work on hidden...)

Still need to wrap my head around the PEK_HIDE, but we are getting there :)

more findings: For some reason the PTCacheEditKeys are flagged `PEK_HIDE`. This also explains why lasso select partially works (because lasso loops with `LOOP_KEYS`, whereas e.g. box select loops with `LOOP_VISIBLE_KEYS`). In this regard lasso select is actually wrong imho, shouldnt let you select those... also explains why combing is not working then (this wont work on hidden...) Still need to wrap my head around the `PEK_HIDE`, but we are getting there :)
Philipp Oeser self-assigned this 2019-09-26 12:13:02 +02:00
Member

Ha! found the culprit:
There is a setting (particle_edit.use_fade_time) that usually is only for Emitter particles, and that makes particles be flagged PEK_HIDEunder certain circumstances.
For some reason this is turned ON in your scene.
This leads to a couple of issues (that need fixing -- see below), but to get you up and running quickly here is the woraround for now:
call bpy.context.scene.tool_settings.particle_edit.use_fade_time = False in your file and you are good to go...

OK, now to fixing:

  • this bug was also present in 2.79 (you could turn this ON for hair as well and couldnt select anymore)
  • this should be ignored for hair alltogether in PE_hide_keys_time (or other code should not respect that flag when editing hair)
  • this needs to be checked if working well with drawing with non-hair (but there are #62893, #64843 to solve first)

Working on fixes...

Ha! found the culprit: There is a setting (`particle_edit.use_fade_time`) that usually is only for `Emitter` particles, and that makes particles be flagged `PEK_HIDE`under certain circumstances. For some reason this is turned ON in your scene. This leads to a couple of issues (that need fixing -- see below), but to get you up and running quickly here is the woraround for now: call `bpy.context.scene.tool_settings.particle_edit.use_fade_time = False` in your file and you are good to go... OK, now to fixing: - this bug was also present in 2.79 (you could turn this ON for hair as well and couldnt select anymore) - this should be ignored for hair alltogether in `PE_hide_keys_time` (or other code should not respect that flag when editing hair) - this needs to be checked if working well with drawing with non-hair (but there are #62893, #64843 to solve first) Working on fixes...

This issue was referenced by e02ecd599b

This issue was referenced by e02ecd599bdc469f70b3383a280fa354008b5630
Author

Thank you for the very quick response and fix! All is working now :)

Thank you for the very quick response and fix! All is working now :)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#70259
No description provided.