source/blender/editors/physics/particle_edit.c
@@ -1625,7 +1625,13 @@ void PE_update_object(Depsgraph *depsgraph, Scene *scene, Object *ob, int usefla
   if (pset->flag & PE_AUTO_VELOCITY) {
     update_velocities(edit);
   }
-  PE_hide_keys_time(scene, edit, CFRA);
+
+  /* Only do this for emitter particles because drawing PE_FADE_TIME is not respected in 2.8 yet
+   * and flagging with PEK_HIDE will prevent selection. This might get restored once this is
+   * supported in drawing (but doesnt make much sense for hair anyways). */
+  if (edit->psys->part->type == PART_EMITTER) {
+    PE_hide_keys_time(scene, edit, CFRA);
+  }
 
   /* regenerate path caches */
   psys_cache_edit_paths(depsgraph, scene, ob, edit, CFRA, G.is_rendering);
